--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.9.3",
     "prismic-reactjs": "^0.3.1",
     "react": "^16.5.2",
+    "react-animated-css": "^1.0.4",
     "react-apollo": "^2.2.4",
     "react-dom": "^16.5.2",
     "react-loading": "^2.0.3",
